--- a/less/global.less
+++ b/less/global.less
@@ -17,6 +17,10 @@ h1, h2, h3, h4, h5 {
   color: @header-font-color;
 }
 
+h1 {
+  font-size: 4rem;
+}
+
 h2 {
   font-size: 3.2rem;
 }
@@ -30,9 +34,19 @@ p {
   line-height: 1.4;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .container {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;  
+  
+  @media @mobile {
+    width: 90%;
+    margin: 0 5%;
+  }
 }
 
